# NetShield

./: .gitignore  CMakeLists.txt  README.md  ml_detector.py
docs/: ANALYTICS_ARCHITECTURE.md  ARCHITECTURE.md  DESIGN_DECISIONS.md  MODULES.md  PROJECT_ANALYSIS.md  ROADMAP.md
include/: pcap_reader.h
include/analytics/: AnalyticsTypes.h  DomainStatistics.h  IPStatistics.h  PacketMetadata.h  PortStatistics.h  ProtocolStatistics.h  TrafficSnapshot.h
netshield-ui/: index.html  package-lock.json  package.json
netshield-ui/src/: App.jsx  index.css
src/: main.cpp  pcap_reader.cpp
src/analytics/: DomainStatistics.cpp  IPStatistics.cpp  PortStatistics.cpp  ProtocolStatistics.cpp
tests/: AnalyticsStatisticsTest.cpp
